deploy: livingbeings/wedding-rsvp@414604a8684b35dfb432f4465f63ad2144b51f71

--- a/index.html
+++ b/index.html
@@ -80,41 +80,42 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-<section class="hero">
-    <section class="navigation">
-        <header>
-            <div class="header-content">
-                <div class="header-nav">
-                    <nav>
-                        <ul class="primary-nav">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#schedule">Schedule</a></li>
-                            <li><a href="#dc-modal" data-toggle="modal" data-target="#dc-modal">Dress Code</a></li>
-                            <li><a href="#eng-pics">Photo Album</a></li>
-                            <li><a href="#spotify-playlist">Spotify</a></li>
-                            <li><a href="#information">Information</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="navicon">
-                    <a class="nav-toggle" href="#"><span></span></a>
-                </div>
-            </div>
-        </header>
-    </section>
-    <div class="hero-wrapper" id="home">
+<header id="SITE_HEADER" class="navigation">
+    <div class="header-content text-center">
+        <div id="comp-m1t8f25r" class="Z_l5lU ku3DBC zQ9jDz qvSjx3 Vq6kJx comp-m1t8f25r wixui-rich-text">
+            <h1 class="logo-title">Marcella & Alex</h1>
+        </div>
+        <div id="comp-m1t6hsyk" class="StylableHorizontalMenu3372578893__root">
+            <nav class="header-nav">
+                <ul class="primary-nav">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#schedule">Schedule</a></li>
+                    <li><a href="#dc-modal" data-toggle="modal" data-target="#dc-modal">Dress Code</a></li>
+                    <li><a href="#information">Information</a></li>
+                    <li><a href="#eng-pics">Photo Album</a></li>
+                    <li><a href="#rsvp">RSVP</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="navicon">
+            <a class="nav-toggle" href="#"><span></span></a>
+        </div>
+    </div>
+</header>
+
+<section class="hero" id="home">
+    <div class="hero-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="hero-content">
-                        <h1 class="logo-title">Marcella & Alex</h1>
                         <p class="hero-subtitle">we're getting married</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
+    <div class="down-arrow floating-arrow"><a href="#our-story"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
 <section id="our-story" class="section-padding">
