deploy: livingbeings/wedding-rsvp@a8e2801fd6bcc9889c5142c12a5c7cb3699ff8a9

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Beth+Ellen&display=swap" rel="stylesheet">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="https://open.spotify.com/embed/iframe-api/v1" async></script>
 </head>
 <body id="top">
 <div id="envelope-overlay">
@@ -459,7 +460,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h3 class="header">Spotify Wedding Playlist</h3>
-                <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6gNJaOCMIWpiYmf7fe6oaw?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe id="spotify-embed"></iframe>
             </div>
         </div>
     </div>
