deploy: livingbeings/wedding-rsvp@8577f693494432506f2d037f29c8e262042f736e

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
                     <li><a href="#schedule">Schedule & RSVP</a></li>
                     <li><a href="#photo-album">Photo Album</a></li>
                     <li><a href="#video-bg">Video Playback</a></li>
-                    <li><a href="#spotify-playlist">Spotify Playlist</a></li>
                     <li><a href="#information">Information</a></li>
                 </ul>
             </nav>
@@ -469,16 +468,9 @@
     </div> 
 </section>
 
-<section id="spotify-playlist" class="section-padding text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h3 class="header">Spotify Wedding Playlist</h3>
-                <iframe id="spotify-embed"></iframe>
-            </div>
-        </div>
-    </div>
-</section>
+<div id="spotify-floating-player">
+    <iframe id="spotify-embed" scrolling="no" style="overflow:hidden; border:none;" loading="lazy"></iframe>
+</div>
 
 <section id="information" class="section-padding">
     <div class="container">
