deploy: livingbeings/wedding-rsvp@d432d42c23d1da1b49698d284b61704d15d8a782

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <div class="flap"></div>
             <div class="letter">
                 <div class="text-center">
-                    <h2 class="names-reveal">Marcella & Alex</h2>
-                    <p class="invite-msg">You're Invited</p>
+                    <h3 class="invite-msg">It's a nice day to share that</h3>
+                    <h2 class="names-reveal">we're getting married</h2>
+                    <p class="invite-msg">6 June 2026</p>
                 </div>
             </div>
             <div class="front"></div>
@@ -97,9 +98,6 @@
                     <li><a href="#information">Information</a></li>
                 </ul>
             </nav>
-        </div>
-        <div class="navicon">
-            <a class="nav-toggle" href="#"><span></span></a>
         </div>
     </div>
 </header>
