--- a/index.html
+++ b/index.html
@@ -117,6 +117,26 @@
     <div class="down-arrow floating-arrow"><a href="#our-story"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
+<section id="invitation" class="section-padding invite-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 text-center">
+                <h3 class="names">MARCELLA & ALEX</h3>
+                <p class="invite-text">invite you to join them for their wedding</p>
+                <p class="on-text">on</p>
+                <div class="dates">
+                    <p>SATURDAY</p>
+                    <h2>06.06.26</h2>
+                </div>
+                <p class="at-text">at</p>
+                <p class="location">Padma Ubud, Banjar Carik, Desa Puhu, Payangan</p>
+                <p class="location">Ubud - Bali</p>
+                <p class="location">Indonesia</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="our-story" class="section-padding">
     <div class="container">
         <div class="row">
@@ -480,7 +500,32 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    
+                    <!-- Location (Map) -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="headingLocation">
+                            <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseLocation" aria-expanded="false" aria-controls="collapseLocation">
+                                    Map & Location
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseLocation" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingLocation">
+                            <div class="panel-body no-padding">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.443313038722!2d115.32440097462451!3d-8.553298586725884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23f69ff9b8a23%3A0xf631a7ed9f6304d!2sParoki%20Santa%20Maria%20Ratu%20Rosari%2C%20Gianyar!5e0!3m2!1sid!2sid!4v1771839853588!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <div style="padding: 20px;">
+                                    <h5><a href="https://maps.app.goo.gl/BgNbjTCeGMmdgodp7" target="_blank"> Gereja Katolik Santa Maria Ratu Rosari</a></h5>
+                                    <p>Jl. Mulawarman No.92A, Abianbase, Kec. Gianyar, Kabupaten Gianyar, Bali 80515</p>
+                                    <p><i class="fa fa-mobile"></i> <a href="tel://+62361943457">+62 361 943457</a></p>
+                                </div>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.1849362230714!2d115.2719654746216!3d-8.383463084548305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd221e79f9f18eb%3A0x6ce6688c8113c9b4!2sPadma%20Resort%20Ubud!5e0!3m2!1sid!2sid!4v1771840552002!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <div style="padding: 20px;">
+                                    <h5><a href="https://maps.app.goo.gl/DD7puaamZuo1k9ot5" target="_blank">Padma Ubud</a></h5>
+                                    <p>Banjar Carik, Desa Puhu, Payangan, Bali, Indonesia</p>
+                                    <p><i class="fa fa-mobile"></i> <a href="tel://+623613011111">+62 361 3011111</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Accommodation -->
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingAccommodation">
@@ -490,12 +535,16 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseAccommodation" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingAccommodation">
+                        <div id="collapseAccommodation" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingAccommodation">
                             <div class="panel-body">
-                                <p>If we haven't already discussed accommodation with you, once you have RSVP'd, get in touch to discuss recommendations! Our advice is to book ASAP as the area is so rural and not massively touristy, so there aren't many hotels or accommodation options, and the good ones will get booked up quickly. We have a list of places that are within the distance of our transfers to and from the wedding.</p>
-                                <p>Due to the taxi transfers we are organising, please let us know where you have booked!</p>
-                                <p>If you independently find accommodation, please speak with us about the taxi to and from the wedding prior to booking as there are restrictions on distance.</p>
-                                <p>If you are planning your own transport to and from the wedding - go crazy, stay wherever you like - Toulouse and Carcassonne are both gorgeous cities about an hour away, and Revel is a nice little town about 20 minutes away! Bear in mind that Ubers aren't a thing here and taxis are rare, and pricey.</p>
+                                <p>We have booked several standard rooms at MaxOne Ubud as the provisioned accommodation of this event.</p>
+                                <p>If you independently find accommodation, please help us to fill the information at the RSVP form</p>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.7578708039896!2d115.26030757462397!3d-8.52287288633231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d74555c4625%3A0x2f3f377221b33118!2sMaxOne%20Hotel%20ubud!5e0!3m2!1sid!2sid!4v1771840282446!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <div style="padding: 20px;">
+                                    <h5><a href="https://maps.app.goo.gl/Bf38XZc82hsBZrzDA" target="_blank">MaxOne Ubud</a></h5>
+                                    <p>Jl. Raya Pengosekan Ubud, Ubud, Kecamatan Ubud, Kabupaten Gianyar, Bali 80571</p>
+                                    <p><i class="fa fa-mobile"></i> <a href="tel://+623613025555">+62 361 3025555</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -535,26 +584,7 @@
                         </div>
                     </div>
 
-                    <!-- Location (Map) -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingLocation">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseLocation" aria-expanded="false" aria-controls="collapseLocation">
-                                    Map & Location
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseLocation" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingLocation">
-                            <div class="panel-body no-padding">
-                                <div id="map-canvas" style="height: 400px; width: 100%;"></div>
-                                <div style="padding: 20px;">
-                                    <h5>Padma Ubud</h5>
-                                    <p>24 Allée du Bonheur, 31100 Toulouse, FRANCE</p>
-                                    <p><i class="fa fa-mobile"></i> <a href="tel://+33123456789">+33 1 23 45 67 89</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
 
                 </div>
             </div>
@@ -581,7 +611,7 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+<!-- <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script> -->
 </body>
 </html>
