deploy: livingbeings/wedding-rsvp@7f825b003b8d5cd5b1d1563632ceff82d126a1f1

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseLocation" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingLocation">
+                        <div id="collapseLocation" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingLocation">
                             <div class="panel-body no-padding">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.443313038722!2d115.32440097462451!3d-8.553298586725884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23f69ff9b8a23%3A0xf631a7ed9f6304d!2sParoki%20Santa%20Maria%20Ratu%20Rosari%2C%20Gianyar!5e0!3m2!1sid!2sid!4v1771839853588!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 <div style="padding: 20px;">
@@ -530,7 +530,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingAccommodation">
                             <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseAccommodation" aria-expanded="true" aria-controls="collapseAccommodation">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseAccommodation" aria-expanded="false" aria-controls="collapseAccommodation">
                                     Accommodation
                                 </a>
                             </h4>
