deploy: livingbeings/wedding-rsvp@bea74483ef5c380d74b4f98caaeb9d5e60446add

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-envelope"></i>
                                 <select name="event" class="" required>
-                                    <option value="no" selected disabled>Will you attend the event?</option>
+                                    <option value="" selected disabled>Will you attend the event?</option>
                                     <option value="yes Matrimony">Holy Matrimony</option>
                                     <option value="yes Reception">Reception</option>
                                     <option value="yes both">Holy Matrimony and Reception</option>
@@ -294,7 +294,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-bed"></i>
                                 <select name="accomodation" class="" required>
-                                    <option value="no" selected disabled>Do you need accomodation?</option>
+                                    <option value="" selected disabled>Do you need accomodation?</option>
                                     <option value="yes">I need accomodation</option>
                                     <option value="no">I do not need accomodation</option>
                                 </select>
@@ -306,7 +306,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i>
                                 <select name="attendance" class="" onchange="updateGuest(this)" required>
-                                    <option value="1" selected disabled >Number of guests attending</option>
+                                    <option value="" selected disabled >Number of guests attending</option>
                                 </select>
                             </div>
                         </div>
